k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-accor
  labels:
    app.kubernetes.io/part-of: demo-accor
    tags.datadoghq.com/env: "demo-accor-260907"
